# ai-clinic-booker

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.hfspace.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  render.yaml
ai-agents/booking/: __init__.py  agent.py  prompt.py  tools.py
ai-agents/core/: base_agent.py  base_tool.py  exceptions.py
ai-agents/core/domain/: __init__.py  booking_rules.py  emergency_rules.py  grounding.py  intake_rules.py
ai-agents/emergency/: __init__.py  agent.py  prompt.py
ai-agents/faq/: __init__.py  agent.py  prompt.py  tools.py
ai-agents/orchestrator/: agent.py  prompt.py
ai-agents/symptom/: __init__.py  agent.py  prompt.py  tools.py
ai_agents/: __init__.py
ai_agents/booking/: agent.py  prompt.py  tools.py
ai_agents/core/: __init__.py  exceptions.py  prompt_loader.py
ai_agents/core/domain/: doctor_lookup.py  grounding.py  intake_rules.py
ai_agents/emergency/: prompt.py
ai_agents/faq/: agent.py  prompt.py  tools.py
ai_agents/orchestrator/: __init__.py  prompt.py
ai_agents/symptom/: agent.py  prompt.py  tools.py
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_partition_knowledge_by_language.py  0003_partition_business_tables_by_language.py
app/: __init__.py  main.py  runtime.py
app/api/: __init__.py
app/api/v1/: __init__.py  router.py
app/conversation/: __init__.py  controller.py  handler.py
app/static/: widget.js
app/webhook/: __init__.py  handler.py
common/: __init__.py  admin_lock.py  config.py  database.py  gemini_client.py  module_loader.py  observability.py  rate_limit.py  resilience.py
core/: __init__.py  base_model.py  base_repository.py  base_response.py  base_service.py  exceptions.py
dal/: __init__.py  booking_repository.py  chunk_repository.py  doctor_repository.py  ingestion_job_repository.py  knowledge_repository.py  lang_tables.py  qdrant_client.py  session.py  specialties.py
data/: __init__.py  booking_repository.py  chunk_repository.py  doctor_repository.py  ingestion_job_repository.py  knowledge_repository.py  qdrant_client.py  session.py
docs/: 01-Architecture.md  01-architecture.md  hf-space-deploy.md  render-deploy.md
eval/: DEEPEVAL_REPORT.md  EVAL_FINDINGS.md  REPORT.md  __init__.py  deepeval_dataset.py  deepeval_gemini.py  golden_set_booking.yaml  golden_set_deepeval_booking.yaml  golden_set_deepeval_faq.yaml  golden_set_deepeval_injection.yaml  golden_set_deepeval_symptom.yaml  golden_set_intent.yaml  golden_set_rag.yaml  metrics.py  runner.py
eval/fixtures/: doctors.yaml  doctors_coverage_fill.yaml
eval/fixtures/en/: TODO_TRANSLATE.md  doctors.yaml
eval/fixtures/jp/: TODO_TRANSLATE.md  doctors.yaml
eval/fixtures/vn/: doctors.yaml
modules/: __init__.py
modules/booking/: __init__.py  controller.py  services.py
modules/conversation/: __init__.py  controller.py
modules/doctor/: __init__.py  controller.py  services.py
modules/knowledge/: __init__.py  controller.py  services.py
modules/knowledge_ingestion/: __init__.py  chunk_service.py  cron.py  embedding_service.py  job_chunk.py  job_embedding.py
scripts/: run_ingestion_job.py  seed_eval_fixtures.py  smoke_test.py
tests/eval/: conftest.py  test_deepeval_booking.py  test_deepeval_faq.py  test_deepeval_injection.py  test_deepeval_symptom.py  test_eval_gate.py  test_faithfulness.py  test_retrieval_metrics.py
tests/integration/: test_booking_concurrency.py  test_booking_flow.py  test_faq_grounding.py  test_ingestion_pipeline.py
tests/unit/: test_admin_lock.py  test_app_factory.py  test_conversation_route.py  test_cors.py  test_dockerignore.py  test_qdrant_search.py  test_rate_limit.py  test_runtime.py  test_settings_defaults.py
tests/unit/ai_agents/: test_adk_model_retry.py  test_agent_llm_config.py  test_booking_rules.py  test_booking_tools.py  test_doctor_lookup.py  test_faq_tools.py  test_grounding.py  test_intent_routing.py  test_symptom_context.py
(+91 files in other folders)
