[project]
name = "ai-clinic-agent"
version = "0.1.0"
description = "AI Clinic Booking Agent backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "alembic",
    "psycopg[binary]",
    "qdrant-client",
    "pydantic-settings",
    "structlog",
    "apscheduler",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
markers = [
    "eval: AI quality gate tests (tests/eval/test_eval_gate.py)",
    "llm: tests that call a real LLM, run nightly",
]
testpaths = ["tests"]
