[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*", "core*", "data*", "common*", "modules*", "eval*"]

[project]
name = "ai-clinic-agent"
version = "0.1.0"
description = "AI Clinic Booking Agent backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "alembic",
    "asyncpg",
    "psycopg[binary]",
    "qdrant-client",
    "pydantic-settings",
    "structlog",
    "apscheduler",
    "google-genai",
    "google-adk",
    "tenacity",
    "opentelemetry-api",
    "opentelemetry-sdk",
    "langchain-core",
    "langchain-text-splitters",
    "langchain-experimental",
    "langchain-google-genai",
    "pyyaml",
    "httpx",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "deepeval",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"alembic/versions/*.py" = ["E501"]
"**/prompt.py" = ["E501"]

[tool.pytest.ini_options]
markers = [
    "eval: AI quality gate tests (tests/eval/test_eval_gate.py)",
    "llm: tests that call a real LLM, run nightly",
]
testpaths = ["tests"]
asyncio_mode = "auto"
# Session-scoped loop: common/database.py's AsyncSessionFactory (and the ADK
# Runner's own DB pool) are process-wide singletons created on first use and
# bound to whatever event loop was running then. pytest-asyncio's default
# "function" scope gives every async test a brand-new loop, which then hands
# asyncpg connections created under an earlier loop to a different one —
# "Future attached to a different loop". One shared loop for the whole
# session avoids that, matching how the real app runs (one loop for good).
asyncio_default_test_loop_scope = "session"
